# rest-template

./: .gitignore  Makefile  alembic.ini  docker-compose.yml  init-db.sql  keycloak.env  nginx.conf  pyproject.toml
api/: .dockerignore  .env-dist  .env-prod  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
api/docker/: app.sh
api/migrations/: env.py
api/migrations/versions/: a8f362ad9c70_add_exp_column_to_user_table.py  a9a74f9dbadb_.py
api/src/: constants.py
api/src/application/auth/: token_types.py
api/src/application/auth/commands/: auth_user_command.py  code_to_token_command.py  confirm_user_command.py  register_client_command.py  register_user_command.py
api/src/application/auth/handlers/: auth_user_handler.py  confirm_user_handler.py  register_client_hadler.py  register_user_handler.py
api/src/application/auth/services/: http_auth.py  jwt_service.py  token_creation.py  token_service.py  white_list.py
api/src/application/client/interfaces/: reader.py  repo.py
api/src/application/common/: id_provider.py
api/src/application/dtos/: base.py  client.py  set_image.py  user.py
api/src/application/usecases/: read.pyi
api/src/application/usecases/auth/: andoroid_auth.py  change_pwd.py  cred_auth.py  refresh_access_token.py
api/src/application/usecases/user/: delete.py  read.py  register.py  set_image.py  update.py
api/src/application/user/dto/: user.py
api/src/application/user/interfaces/: reader.py  repo.py
api/src/application/utils/: auth_helpers.py  helpers.py  jwt_utils.py  reset_pwd_utils.py  utils.py  validation.py
api/src/core/db/: db_types.py  logs.py
api/src/core/di/: container.py
api/src/core/di/providers/: db.py  redis_provider.py  repositories.py  services.py  settings.py  usecases.py
api/src/core/exceptions/auth/: validation.py
api/src/core/exceptions/groups/: valdiation.py
api/src/core/exceptions/user/: delete.py
api/src/core/logs/: log_conf.py
api/src/core/middlewares/: middleware_utils.py
api/src/domain/common/entities/: value_objects.py
api/src/domain/entities/auth/: pkce.py
api/src/domain/entities/client/: model.py  value_objects.py
api/src/domain/entities/role/: model.py  value_objects.py
api/src/domain/entities/user/: access_fields.py  model.py  schemas.py  value_objects.py
api/src/domain/exceptions/: auth.py  base.py  client.py  user.py
api/src/domain/repositories/: base_repo.py
api/src/domain/services/: entity_service.py
api/src/infrastructure/db/: config.py
api/src/infrastructure/gunicorn/: config.py  logger.py
api/src/infrastructure/repositories/: base_repository.py
api/src/infrastructure/services/: entity_service_impl.py
api/src/presentation/web_api/: config.py  http_id_provider.py  main.py  responses.py
api/src/settings/: config.py
api/src/templates/: confirmation.html
api/tests/: config.py  conftest.py  handmade.py
api/tests/auth/: test_auth.py
api/tests/integration/user/: test_delete.py  test_set_avatar.py  test_update.py
(+48 files in other folders)
